Attempt at fixing elements not showing on load

--- a/src/index.scss
+++ b/src/index.scss
@@ -43,6 +43,14 @@ header, footer {
         font-size: 2em;
     }
 }
+.login {
+    > * {
+        display: none;
+    }
+    #loginForm {
+        display: initial;
+    }
+}
 
 #slogans ol, #editor-current-slogan ol {
     display: flex;
